--- a/contribution.html
+++ b/contribution.html
@@ -15,7 +15,7 @@
             <a href="index.html">Home</a>
             <a href="rsvp.html">RSVP</a>
             <a href="registry.html">Registry</a>
-            <a href="contribution.html">529 Contribution</a>
+            <a href="contribution.html">529 Plan</a>
         </div>
         <div class="main">
             <h2>529 Contribution</h2>
