--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Jasmine Kim's Baby Shower</h1>
+             <h1>Jasmine & Brody's Baby Shower</h1>
         </div>
         <div class="nav">
             <a href="index.html">Home</a>
