--- a/registry.html
+++ b/registry.html
@@ -15,7 +15,7 @@
             <a href="index.html">Home</a>
             <a href="rsvp.html">RSVP</a>
             <a href="registry.html">Registry</a>
-            <a href="contribution.html">529 Plan</a>
+            <a href="contribution.html">529</a>
         </div>
         <div class="main">
             <h2>Amazon Baby Registry</h2>
