--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
             <a href="contribution.html">529</a>
         </div>
         <div class="main">
-            <h2>Welcome to Jasmine Kim's Baby Shower Website!</h2>
-            <p>This website is designed to provide information and resources for guests attending Jasmine's baby shower. You can find details on the baby registry, RSVP to the event, and even contribute to the baby's 529 education savings plan.</p>
+           <p>We are excited to celebrate this special time with you! You can find the details and RSVP for our baby shower on this website. For those looking to spoil our little one, we have a link to our Amazon registry. If you prefer to give a different kind of gift, we would be honored if you would consider contributing to our baby’s 529 education savings plan.</p>
         </div>
     </div>
 </body>
