--- a/rsvp.html
+++ b/rsvp.html
@@ -19,7 +19,7 @@
         </div>
         <div class="main">
             <h2>RSVP to the Baby Shower</h2>
-            <p>Please RSVP to the baby shower by filling out the form using the link below:</p>
+            <img scr="IMG_3811.png">Please RSVP to the baby shower by filling out the form using the link below:</img>
             <p><a href="https://forms.gle/WY1XNcxqWVG577Wu9" target="_blank">RSVP Form</a></p>
         </div>
     </div>
