--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Baby Shower</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <div class="header">
-             <h1>Jasmine & Brody's Baby Shower</h1>
-        </div>
-        <div class="nav">
+        <header class="header">
+            <h1>Jasmine & Brody's Baby Shower</h1>
+        </header>
+        <nav class="nav">
             <a href="index.html">Home</a>
             <a href="rsvp.html">RSVP</a>
             <a href="registry.html">Registry</a>
             <a href="contribution.html">529</a>
-        </div>
-        <div class="main">
-           <p>We are excited to celebrate this special time with you! You can find the details and RSVP for our baby shower on this website.<br><br>For those looking to spoil our little girl, we have a link to our Amazon registry. If you prefer to give a different kind of gift, we would be honored if you would consider contributing to our baby’s 529 education savings plan.<br></br>In lieu of cards, please bring your favorite baby or children's book and help us create a library for our little one.</p>
-        </div>
+        </nav>
+        <main class="main">
+            <p>We are excited to celebrate this special time with you! You can find the details and RSVP for our baby shower on this website.<br><br>For those looking to spoil our little girl, we have a link to our Amazon registry. If you prefer to give a different kind of gift, we would be honored if you would consider contributing to our baby’s 529 education savings plan.<br><br>In lieu of cards, please bring your favorite baby or children's book and help us create a library for our little one.</p>
+        </main>
     </div>
 </body>
 </html>
