--- a/registry.html
+++ b/registry.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Baby Shower Registry</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <div class="header">
-             <h1>Jasmine & Brody's Baby Shower</h1>
-        </div>
-        <div class="nav">
+        <header class="header">
+            <h1>Jasmine & Brody's Baby Shower</h1>
+        </header>
+        <nav class="nav">
             <a href="index.html">Home</a>
             <a href="rsvp.html">RSVP</a>
             <a href="registry.html">Registry</a>
             <a href="contribution.html">529</a>
-        </div>
-        <div class="main">
+        </nav>
+        <main class="main">
             <h2>Amazon Baby Registry</h2>
             <p>We have registered for some baby essentials on Amazon. You can view and purchase items from our registry using the link below:</p>
             <p><a href="https://www.amazon.com/baby-reg/jasmine-kim-brody-ledbetter-december-2024-annarbor/1DHRAOAMNR100" target="_blank">Amazon Baby Registry</a></p>
-        </div>
+        </main>
     </div>
 </body>
 </html>
