--- a/rsvp.html
+++ b/rsvp.html
@@ -4,24 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Baby Shower RSVP</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <div class="header">
-             <h1>Jasmine & Brody's Baby Shower</h1>
-        </div>
-        <div class="nav">
+        <header class="header">
+            <h1>Jasmine & Brody's Baby Shower</h1>
+        </header>
+        <nav class="nav">
             <a href="index.html">Home</a>
             <a href="rsvp.html">RSVP</a>
             <a href="registry.html">Registry</a>
             <a href="contribution.html">529</a>
-        </div>
-        <div class="main">
-            <a href="https://forms.gle/WY1XNcxqWVG577Wu9" target="_blank"> <h2>RSVP to the Baby Shower</h2></a>
-           <a href="https://forms.gle/WY1XNcxqWVG577Wu9" target="_blank"><img src="IMG_3811.png" height="700" width="550"></a>
+        </nav>
+        <main class="main">
+            <h2><a href="https://forms.gle/WY1XNcxqWVG577Wu9" target="_blank">RSVP to the Baby Shower</a></h2>
+            <a href="https://forms.gle/WY1XNcxqWVG577Wu9" target="_blank">
+                <img src="IMG_3811.png" alt="RSVP Image" style="max-width: 100%; height: auto;">
+            </a>
             <p><a href="https://forms.gle/WY1XNcxqWVG577Wu9" target="_blank">RSVP Form</a></p>
-        </div>
+        </main>
     </div>
 </body>
 </html>
