--- a/contribution.html
+++ b/contribution.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Baby Shower 529 Contribution</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <div class="header">
+        <header class="header">
             <h1>Jasmine & Brody's Baby Shower</h1>
-        </div>
-        <div class="nav">
+        </header>
+        <nav class="nav">
             <a href="index.html">Home</a>
             <a href="rsvp.html">RSVP</a>
             <a href="registry.html">Registry</a>
             <a href="contribution.html">529</a>
-        </div>
-        <div class="main">
+        </nav>
+        <main class="main">
             <h2>529 Contribution</h2>
             <p>If you would like to contribute to our baby's 529 education savings plan, please follow the instructions below:</p>
             <ol>
@@ -26,7 +26,7 @@
                 <li>Enter your name and the amount of your gift.</li>
                 <li>Make your gift via electronic funds transfer or check.</li>
             </ol>
-        </div>
+        </main>
     </div>
 </body>
 </html>
