--- a/contribution.html
+++ b/contribution.html
@@ -18,8 +18,7 @@
             <a href="contribution.html">529</a>
         </nav>
         <main class="main">
-            <h2>529 Contribution</h2>
-            <p>If you would like to contribute to our baby's 529 education savings plan, please follow the instructions below:</p>
+            <p>If you prefer to give a different kind of gift, we would be honored if you would consider contributing to our baby’s 529 education savings plan. Please follow the instructions below:</p>
             <ol>
                 <li>Go to <a href="https://www.ugift529.com" target="_blank">Ugift529.com</a>.</li>
                 <li>Enter the Ugift code: <strong>68R-98R</strong></li>
