--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Baby Shower</title>
+    <meta name="description" content="Celebrate Jasmine & Brody's Baby Shower with us! RSVP and find more details on our registry.">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
