--- a/registry.html
+++ b/registry.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Baby Shower Registry</title>
+    <meta name="description" content="Explore Jasmine & Brody's Amazon Baby Registry for essential items.">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
