--- a/rsvp.html
+++ b/rsvp.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Baby Shower RSVP</title>
+    <meta name="description" content="RSVP to Jasmine & Brody's Baby Shower and join the celebration.">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -22,6 +23,7 @@
             <a href="https://forms.gle/WY1XNcxqWVG577Wu9" target="_blank">
                 <img src="IMG_3811.png" alt="RSVP Image" style="max-width: 100%; height: auto;">
             </a>
+            
         </main>
     </div>
 </body>
