--- a/contribution.html
+++ b/contribution.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Baby Shower 529 Contribution</title>
+    <meta name="description" content="Contribute to Jasmine & Brody's baby's 529 education savings plan.">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,6 +19,7 @@
             <a href="contribution.html">529</a>
         </nav>
         <main class="main">
+            
             <p>If you prefer to give a different kind of gift, we would be honored if you would consider contributing to our baby’s 529 education savings plan. Please follow the instructions below:</p>
             <ol>
                 <li>Go to <a href="https://www.ugift529.com" target="_blank">Ugift529.com</a>.</li>
