--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Baby Shower</title>
     <meta name="description" content="Celebrate Jasmine & Brody's Baby Shower with us! RSVP and find more details on our registry.">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="favicon.png" type="image/png">
 </head>
 <body>
     <div class="container">
