--- a/registry.html
+++ b/registry.html
@@ -6,6 +6,7 @@
     <title>Baby Shower Registry</title>
     <meta name="description" content="Explore Jasmine & Brody's Amazon Baby Registry for essential items.">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="favicon.png" type="image/png">
 </head>
 <body>
     <div class="container">
@@ -19,6 +20,7 @@
             <a href="contribution.html">529</a>
         </nav>
         <main class="main">
+            <h2>Amazon Baby Registry</h2>
             <p>We have registered for some baby essentials on Amazon. You can view and purchase items from our registry using the link below:</p>
             <p><a href="https://www.amazon.com/baby-reg/jasmine-kim-brody-ledbetter-december-2024-annarbor/1DHRAOAMNR100" target="_blank">Amazon Baby Registry</a></p>
         </main>
