--- a/rsvp.html
+++ b/rsvp.html
@@ -6,6 +6,7 @@
     <title>Baby Shower RSVP</title>
     <meta name="description" content="RSVP to Jasmine & Brody's Baby Shower and join the celebration.">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="favicon.png" type="image/png">
 </head>
 <body>
     <div class="container">
@@ -23,7 +24,7 @@
             <a href="https://forms.gle/WY1XNcxqWVG577Wu9" target="_blank">
                 <img src="IMG_3811.png" alt="RSVP Image" style="max-width: 100%; height: auto;">
             </a>
-            
+            <p><a href="https://forms.gle/WY1XNcxqWVG577Wu9" target="_blank">RSVP Form</a></p>
         </main>
     </div>
 </body>
