--- a/contribution.html
+++ b/contribution.html
@@ -6,6 +6,7 @@
     <title>Baby Shower 529 Contribution</title>
     <meta name="description" content="Contribute to Jasmine & Brody's baby's 529 education savings plan.">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="favicon.png" type="image/png">
 </head>
 <body>
     <div class="container">
@@ -19,8 +20,8 @@
             <a href="contribution.html">529</a>
         </nav>
         <main class="main">
-            
-            <p>If you prefer to give a different kind of gift, we would be honored if you would consider contributing to our baby’s 529 education savings plan. Please follow the instructions below:</p>
+            <h2>529 Contribution</h2>
+            <p>If you would like to contribute to our baby's 529 education savings plan, please follow the instructions below:</p>
             <ol>
                 <li>Go to <a href="https://www.ugift529.com" target="_blank">Ugift529.com</a>.</li>
                 <li>Enter the Ugift code: <strong>68R-98R</strong></li>
