--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="contribution.html">529</a>
         </nav>
         <main class="main">
-            <p>We are excited to celebrate this special time with you! You can find the details and RSVP for our baby shower on this website.<br><br>For those looking to spoil our little girl, we have a link to our Amazon registry. If you prefer to give a different kind of gift, we would be honored if you would consider contributing to our baby’s 529 education savings plan.<br><br>In lieu of cards, please bring your favorite baby or children's book and help us create a library for our little one.</p>
+            <p>We are excited to celebrate this special time with you! You can find the details and RSVP for our baby shower on this website.<br><br>For those looking to spoil our little girl, we have a link to our Amazon registry. If you prefer to give a different kind of gift, we would be honored if you would consider contributing to our baby’s 529 education savings plan.</p>
         </main>
     </div>
 </body>
