--- a/registry.html
+++ b/registry.html
@@ -20,9 +20,8 @@
             <a href="contribution.html">529</a>
         </nav>
         <main class="main">
-            <h2>Amazon Baby Registry</h2>
-            <p>We have registered for some baby essentials on Amazon. You can view and purchase items from our registry using the link below:</p>
-            <p><a href="https://www.amazon.com/baby-reg/jasmine-kim-brody-ledbetter-december-2024-annarbor/1DHRAOAMNR100" target="_blank">Amazon Baby Registry</a></p>
+            <h2><a href="https://www.amazon.com/baby-reg/jasmine-kim-brody-ledbetter-december-2024-annarbor/1DHRAOAMNR100" target="_blank">Amazon Baby Registry</a></h2>
+            <p>We have registered for some baby essentials on Amazon. You can view and purchase items from our registry using the link above.</p>
         </main>
     </div>
 </body>
